<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_icon_map"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_icon_create"
        android:title="@string/share" />
    <item
        android:id="@+id/nav_conversation"
        android:icon="@drawable/ic_round_message_24"
        android:title="Conversation" />
    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_sharp_notifications"
        android:title="Notification" />
    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_icon_user"
        android:title="@string/user" />
</menu>