<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_card_background"
    tools:context="Fragments.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_or_signup_below"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/dark_button"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            app:icon="@drawable/ic_icon_login"
            app:iconPadding="-30dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/dark_button_background"
            android:text="@string/sign_up"
            app:icon="@drawable/ic_icon_registration"
            app:iconPadding="-25dp" />

        <TextView
            android:id="@+id/login_text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:gravity="center"
            android:text="@string/adv104"
            android:textAllCaps="true"
            android:textColor="@color/dark_background"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>