<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/info_window_image"
            android:layout_width="169dp"
            android:layout_height="120dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/login_screen_illustration" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_window_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/date"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/info_window_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="start"
                android:text="@string/title"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_window_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingTop="2dp"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="32dp" />

            <TextView
                android:id="@+id/info_window_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_name" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>