<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_card_background"
    app:cardCornerRadius="10dp"
    app:contentPadding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_edit_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/type_in_your_password"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:paddingStart="4dp"
            android:paddingRight="4dp"
            android:textColorHint="@color/dark_hint_color"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/dialog_edit_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirm_your_password"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_dialog_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/type_in_your_password"
            android:importantForAutofill="no"
            android:inputType="text|textPassword"
            android:paddingStart="4dp"
            android:paddingRight="4dp"
            android:textColorHint="@color/dark_hint_color"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/dark_button_background"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_button"
            android:text="@string/cancel"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.cardview.widget.CardView>