<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:fillViewport="true"
    tools:context="Fragments.ShareFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_background">

        <ImageView
            android:id="@+id/image_share"
            android:layout_width="match_parent"
            android:layout_height="361dp"
            android:contentDescription="@string/share"
            android:scaleType="fitCenter"
            android:src="@drawable/share_screen_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/share_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="324dp"
            android:background="@drawable/bg_textview_shadow"
            android:padding="5dp"
            android:text="@string/share_current_location"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/share_text_tap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:background="@drawable/bg_textview_frosted_shadow"
            android:padding="5dp"
            android:text="@string/tap_to_add_image"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/dark_card_background"
            app:cardCornerRadius="10dp"
            app:contentPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_share">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/share_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_title"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/type_in_your_title"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/share_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/string_description"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:gravity="left"
                    android:hint="@string/type_in_your_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textPersonName"
                    android:maxLines="5"
                    android:minLines="5"
                    android:padding="4dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn_share_loaction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/dark_button_background"
                    android:text="@string/share_location" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>