<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signup_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_textview_shadow"
        android:padding="5dp"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@+id/image_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/image_signup_illustration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/sign_up"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup_screen_illustration" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_avatar"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:translationY="25dp"
        android:translationZ="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_signup_illustration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/imageviewroundercorners"
        app:srcCompat="@drawable/avatar_placeholder" />

    <TextView
        android:id="@+id/signup_text_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_textview_frosted_shadow"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/tap"
        android:textColor="#FFFFFF"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_avatar"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/dark_card_background"
        app:cardCornerRadius="12dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/signup_text_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstname"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/type_in_your_first_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/signup_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/type_in_your_last_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/signup_text_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/type_in_your_email"
                    android:importantForAutofill="no"
                    android:inputType="text|textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/signup_text_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/type_in_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/signup_text_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:hint="@string/confirm_your_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="6dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btn_signup_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/dark_button_background"
                    android:onClick="onClickBtnSignUpSubmit"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="442dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="377dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="697dp" />

</androidx.constraintlayout.widget.ConstraintLayout>