<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/dark_dialog_background"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_dialog_shared_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar_placeholder" />

        <ImageView
            android:id="@+id/image_dialog_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_textview_shadow"
            android:contentDescription="@string/todo"
            android:padding="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_dialog_shared_photo"
            app:srcCompat="@drawable/ic_icon_delete" />

        <EditText
            android:id="@+id/edt_shared_edit_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="236dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:hint="@string/type_in_your_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/dark_hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:translationY="-5dp"
            app:cardBackgroundColor="@color/dark_dialog_background"
            app:cardCornerRadius="10dp"
            app:contentPadding="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_dialog_shared_photo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edt_shared_edit_dialog_description"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/bg_edittext"
                    android:ems="10"
                    android:gravity="start|right"
                    android:hint="@string/type_in_your_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textPersonName"
                    android:padding="3dp"
                    android:scrollbars="vertical"
                    android:text="@string/description"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/dark_hint_color"
                    app:layout_constraintBottom_toTopOf="@+id/btn_dialog_edit_shared_update"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_dialog_edit_shared_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_button_background"
                    android:text="@string/update"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>